welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:4: error: ';' expected but ')' found.
var x = 0; do {run();x = x + 1)} while(x!=3); 
                              ^