welcome.lessons.welcome.methods.picture.PictureMono.scala.code
override def run() {avance();marque();avance();gauche();avance();marque();recule();droite();avance();marque();avance();gauche();}
def marque() {baisseBrosse();leveBrosse();}
var x = 0; do {run();x = x + 1)} while(x!=3);